--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -13,17 +15,17 @@
   margin-top: 1em;
 }
 
-#author,
-#source-code {
-  position: absolute;
-  top: 0.5em;
-  font-size: 0.8em;
+/* Custom shadcn styling */
+.App {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#author {
-  right: 2em;
+/* Progress bar animation */
+@keyframes progress {
+  0% { width: 0%; }
+  100% { width: 100%; }
 }
 
-#source-code {
-  left: 2em;
+.animate-progress {
+  animation: progress 2s ease-in-out;
 }
