--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
-@import "tailwindcss/preflight";
-@tailwind utilities;
+/* Tailwind CSS 指令 */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 #root {
   margin: 0 auto;
